--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -10,15 +10,38 @@ $dark: #343a40;
 
 // Then add them to your custom theme-colors map, together with any additional colors you might need
 $theme-colors: (
-	primary: $primary,
-	secondary: $secondary,
-	success: $success,
-	info: $info,
-	warning: $warning,
-	danger: $danger,
-	light: $light,
-	dark: $dark,
-	// add any additional color below
+  primary: $primary,
+  secondary: $secondary,
+  success: $success,
+  info: $info,
+  warning: $warning,
+  danger: $danger,
+  light: $light,
+  dark: $dark,
+  // add any additional color below
 );
 
-@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
+.song-results-conatiner,
+.annotation-results-conatiner {
+  margin-top: 15px;
+}
+
+ul {
+  padding-left: 0px;
+}
+
+.song-result,
+.annotation-result {
+  border: 1px solid black;
+  list-style-type: none;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  width: 700px;
+}
+
+.song-result:hover {
+  background-color: #e3e6e8;
+  cursor: pointer;
+}
+
+@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
